# codex-telegram-gateway

./: .env.example  .gitignore  AGENTS.md  README.md  config.example.toml  pyproject.toml
.ai-factory/: ARCHITECTURE.md  DESCRIPTION.md  PLAN.md  config.yaml
.ai-factory/patches/: 2026-04-20-11.48.md
.ai-factory/qa/main-88d050b1/: change-summary.md  test-cases.md  test-plan.md
.ai-factory/rules/: base.md
docs/: architecture.md  cli.md  configuration.md  getting-started.md  testing-and-operations.md
src/codex_telegram_gateway/: __main__.py  app.py  codex_adapter.py  config.py  execution_policy.py  logging_utils.py  models.py  path_security.py  rate_limit.py  response_ux.py  session_manager.py  telegram_api.py  workspace_preflight.py  workspace_store.py
systemd/: codex-telegram-gateway.service
tests/: test_app_default_workspace.py  test_app_prompt_flow.py  test_app_session_controls.py  test_codex_adapter.py  test_config.py  test_execution_policy.py  test_main.py  test_path_security.py  test_response_ux.py  test_session_manager.py  test_telegram_api.py  test_workspace_preflight.py  test_workspace_store.py
